--- a/options.css
+++ b/options.css
@@ -6,12 +6,32 @@ button {
 }
 
 body {
+  margin: 0px;
   background-color: lightsteelblue;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   justify-content: center;
 }
 
-.main-container {
+#update-container {
+  min-height: 38px;
+  height: auto;
+}
+
+#update-notice {
+  width: 700px;
+  font-size: 30px;
+  color: black;
+  border-radius: 6px;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  background-color: limegreen;
+}
+
+#main-container {
   min-width: 600px;
   width: 700px;
   display: block;
